Dashboard fixed, cards aligned in index

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,7 +40,6 @@
 
 .card-room > img {
   object-fit: cover;
-  margin: auto;
   width: 460px;
   height: 260px;
 }
@@ -97,6 +96,6 @@
 
 .card-footer {
   position: absolute;
-  right: 4px;
+  right: 8px;
   top: 4px;
 }
